--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
     compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('org.junit.jupiter:junit-jupiter-engine:5.0.0-M1')
+    testCompile('com.h2database:h2:1.4.194')
 }
 
 build.dependsOn(':web-client:build')
