WIP: About to do client test of backend

--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext {
         kotlinVersion = '1.1.60'
         springBootVersion = '2.0.0.M4'
+        junitJupiterVersion = '5.0.2'
     }
     repositories {
         mavenCentral()
@@ -37,14 +38,15 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter')
+    compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
     compile("org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion")
     compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
     compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.junit.jupiter:junit-jupiter-engine:5.0.0-M1')
-    testCompile('com.h2database:h2:1.4.194')
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
+    testCompile("com.h2database:h2:1.4.194")
 }
 
 build.dependsOn(':web-client:build')
