--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -45,10 +45,10 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     compile("khttp:khttp:0.1.0")
+    compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
     testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
-    testCompile("com.h2database:h2:1.4.194")
 }
 
 build.dependsOn(':web-clients:build')
