--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -37,7 +37,6 @@ repositories {
     maven { url "http://jcenter.bintray.com" }
 }
 
-
 dependencies {
     compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-web:$springBootVersion")
@@ -46,6 +45,7 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     compile("khttp:khttp:0.1.0")
+    compile('io.jsonwebtoken:jjwt:0.9.0')
     compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
