--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile('io.jsonwebtoken:jjwt:0.9.0')
     compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.security:spring-security-test")
     testCompile("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
     testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
 }
