--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-security:$springBootVersion")
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+    compile("commons-codec:commons-codec:1.10")
     compile("khttp:khttp:0.1.0")
     compile('io.jsonwebtoken:jjwt:0.9.0')
     compile("com.h2database:h2")
