--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         kotlinVersion = '1.2.40'
-        springBootVersion = '2.0.0.M4'
+        springBootVersion = '2.0.2'
         junitJupiterVersion = '5.0.2'
     }
     repositories {
@@ -45,7 +45,6 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     compile("commons-codec:commons-codec:1.10")
-    compile("khttp:khttp:0.1.0")
     compile('io.jsonwebtoken:jjwt:0.9.0')
     compile("com.h2database:h2")
     testCompile("org.springframework.boot:spring-boot-starter-test")
