--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -1,8 +1,8 @@
 buildscript {
     ext {
         kotlinVersion = '1.2.40'
-        springBootVersion = '2.0.2'
-        junitJupiterVersion = '5.0.2'
+        springBootVersion = '2.0.2.RELEASE'
+        junitJupiterVersion = '5.2.0'
     }
     repositories {
         mavenCentral()
@@ -13,6 +13,7 @@ buildscript {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.junit.platform:junit-platform-gradle-plugin:1.1.0")
     }
 }
 
@@ -21,6 +22,7 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.junit.platform.gradle.plugin'
 
 sourceCompatibility = 1.8
 compileKotlin {
@@ -47,10 +49,18 @@ dependencies {
     compile("commons-codec:commons-codec:1.10")
     compile('io.jsonwebtoken:jjwt:0.9.0')
     compile("com.h2database:h2")
+    compile("com.fasterxml.jackson.module:jackson-module-kotlin")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("org.springframework.security:spring-security-test")
-    testCompile("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
-    testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
+//    testCompile("org.junit.jupiter:junit-jupiter-params:$junitJupiterVersion")
+    testCompile("org.junit.jupiter:junit-jupiter-api:$junitJupiterVersion")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
 }
 
 build.dependsOn(':web-clients:build')
+
+test{
+    useJUnitPlatform{
+        includeEngines 'junit-jupiter'
+    }
+}
