Building logged in user state management in vue

--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -61,7 +61,7 @@ task copyVueClient(type: Copy) {
     into file('src/main/resources/static')
 }
 
-build.dependsOn(':vue-client:build')
+copyVueClient.dependsOn(':vue-client:build')
 build.dependsOn('copyVueClient')
 
 test{
