Working on my content screen. Lists and layout

--- a/web-server/build.gradle
+++ b/web-server/build.gradle
@@ -58,13 +58,13 @@ dependencies {
     testRuntime("org.junit.jupiter:junit-jupiter-engine:$junitJupiterVersion")
 }
 
-task copyVueClient(type: Copy) {
-    from project(':vue-client').file('dist')
-    into file('src/main/resources/static')
-}
-
-copyVueClient.dependsOn(':vue-client:build')
-build.dependsOn('copyVueClient')
+//task copyVueClient(type: Copy) {
+//    from project(':vue-client').file('dist')
+//    into file('src/main/resources/static')
+//}
+//
+//copyVueClient.dependsOn(':vue-client:build')
+//build.dependsOn('copyVueClient')
 
 test{
     useJUnitPlatform{
