--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "dev": "vue-cli-service build --mode development --dest ../web-server/src/main/resources/static --watch",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "test:watch": "vue-cli-service test:unit --watch"
   },
   "dependencies": {
     "axios": "^0.18.0",
