--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.22.2",
     "vue": "^2.5.16",
     "vue-class-component": "^6.0.0",
+    "vue-markdown": "^2.2.4",
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/chai": "^4.1.0",
     "@types/mocha": "^2.2.46",
+    "@types/vue-markdown": "^2.2.0",
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.15",
     "@vue/cli-plugin-unit-mocha": "^3.0.0-beta.15",
