--- a/vue-client/package.json
+++ b/vue-client/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "dev": "vue-cli-service build --mode development --dest ../web-server/src/main/resources/static --watch",
+    "dev": "vue-cli-service build --watch --mode development --dest ../web-server/src/main/resources/static",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
     "test:watch": "vue-cli-service test:unit --watch"
